# compass

./: .env.example  .gitignore  PRD.md  README.md  docker-compose.yml  package-lock.json  package.json  project_overview.md  tasks.md  ui-makeover.md
Context/: README.md  heyscape.md  strata town.md  town square.md  townsquare.md  willow.md
apps/api/: Dockerfile  main.py  pyproject.toml
apps/api/src/: config.py  models.py
apps/api/src/orchestrator/: runner.py  writer.py
apps/api/src/routes/: artifacts.py  chat.py  contexts.py  prompts.py  runs.py
apps/api/src/store/: artifacts_dir.py  contexts_dir.py  events.py  prompts.py  runs.py
apps/api/src/tools/: autocontent.py  elevenlabs.py  llm.py  parallel.py  reportgen.py
apps/web/: Dockerfile  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts  polling.ts
apps/web/src/components/: ArtifactCard.tsx  ArtifactModal.tsx  ChatPanel.tsx  GradientBackground.tsx  InputPanel.tsx  LiveThinking.tsx  OutputSelector.tsx  RunDashboard.tsx  RunSidebar.tsx  SearchBar.tsx  SettingsPanel.tsx
apps/web/src/components/ui/: markdown.tsx
apps/web/src/db/: dexie.ts
apps/web/src/lib/: formats.ts
apps/web/src/state/: store.ts
scripts/: dev.sh
stitch/: bento-desktop.html  home-light.html
